# rag-ops-system

./: .env.example  .gitignore  Dockerfile  Dockerfile.mlflow  LICENSE  README.md  docker-compose.yml  pyproject.toml  start.ps1
.github/workflows/: rag_ops_ci.yml
k8s/: 01-namespace.yaml  02-configmap.yaml  03-secrets.yaml  04-deployment.yaml  05-service.yaml
src/: __init__.py
src/agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
src/api/: main.py  routes.py  schemas.py
src/core/: __init__.py  config.py  monitoring.py
src/eval/: evaluate.py
src/ingestion/: __init__.py  embeddings.py  milvus_client.py  pipeline.py
tests/: golden_dataset.py
